--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "rustfuck"
-version = "0.1.0"
-authors = ["Meryll <felix.hppt@gmail.com>"]
+version = "1.0.0"
+authors = ["Meryll"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm7-0"] }
+clap = "3.0.0-beta.2"
